Update button style to stop text truncation

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,6 +22,10 @@ td {
 .bingoTile {
     text-align: center;
     vertical-align: middle;
+    background: none;
+    width: 100%;
+    height: 100%;
+    border: 0;
 }
 .daubed {
     // TODO: make better daub marker
